        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4
      % Version 25
      _ 2016-xx-xx
      * New widget including openstreetmap for current position when opening widget
      * minify and shrink resources (3.8Mo>2.9Mo)
      * #109 Slider bar for graph size in preference (bug in lib for max value)
      * Close #99 Handle new device created/modified when offline
      * Start working on #19
      * Close #120 Adding an ANR catch lib
      * Close #105 statistics of server exchange are back
      * Correct widget selector for DT_HVACFan
      * Sort sensor and commands at sync by sensor_id or command_id for 0.5
      % Version 24
      _ 2016-10-15
      ! Important do not hesitate to use ACRA crash report to help developer correct those.
      * #37 handle widget not existing
      * #38 more sensor/command types in translation
      * #102 Adding method to read domogik QRCODE configuration
      * #19 start in a specific area (not yet finished)
      * Close #118 Add ACRA crash reports feedback by mail
      * Do not open history view if it is empty
      * #37 Widget_list for specific datatype (sensor and command)
      * Close #116 Values saved from datatype for use in Widget_list
      * Close #115 History for boolean widget with translation too
      * Update zeromq.jeromq to version 0.3.6
      * Correct some bugs (sync progression, start in area crash on back)
      * Remove logger lib (https://github.com/orhanobut/logger) as it may crash when domodroid comes back from background due to too many requests.
      % Version 23
      _ 2016-09-25
      * Some translation for xee and body plugin
      * Really fix #114 Range widget do not display command name in 0.4+