@@ -1,6 +1,9 @@
 package applications;
 
+import android.app.AlarmManager;
 import android.app.Application;
+import android.app.PendingIntent;
+import android.content.Intent;
 
 import com.github.anrwatchdog.ANRWatchDog;
 
@@ -33,5 +36,13 @@ public class domodroid extends Application {
         // The following line triggers the initialization of ACRA
         ACRA.init(this);
         new ANRWatchDog().start();
+
+        //get metrics every 30s
+        int repeatTime = 30;  //Repeat alarm time in seconds
+        AlarmManager processTimer = (AlarmManager)getSystemService(ALARM_SERVICE);
+        Intent intent = new Intent(this, metrics.MetricsServiceReceiver.class);
+        PendingIntent pendingIntent = PendingIntent.getBroadcast(this, 0,  intent, PendingIntent.FLAG_UPDATE_CURRENT);
+        processTimer.setRepeating(AlarmManager.RTC_WAKEUP, System.currentTimeMillis(),repeatTime*1000, pendingIntent);
+
     }
 }
